--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Node Express MySQL Typescript</title>
+        <title>Custom Cloud Storage</title>
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
@@ -60,12 +60,11 @@
         <div class="flex-center position-ref full-height">
             <div class="content">
                 <div class="title m-b-md">
-                  Node Express MySQL Typescript
+                  DIY Custom Cloud Storage
                 </div>
 
                 <div class="links">
-                    <a href="/docx">Documentation</a>
-                    <a href="https://github.com/jbagaresgaray/mean-typescript">GitHub</a>
+                    <a href="https://github.com/jbagaresgaray/mean-typescript">Fork on GitHub</a>
                 </div>
             </div>
         </div>
